--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "mint-ui",
+  "name": "@mint/ui",
   "private": true,
   "version": "0.0.1",
+  "license": "MIT",
+  "author": {
+    "name": "Tek Min Ewe",
+    "email": "ewe.tekmin@outlook.com",
+    "url": "https://tekminewe.com"
+  },
   "type": "module",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/index.umd.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./index.cjs",
+  "module": "./index.js",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs"
+      "import": "./index.js",
+      "require": "./index.cjs"
     },
-    "./styles.css": "./dist/styles.css"
+    "./styles.css": "./styles.css",
+    "./*": {
+      "import": "./*/index.js",
+      "require": "./*/index.cjs"
+    }
   },
+  "types": "./index.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "postbuild": "cp package.json dist/ && cp README.md dist/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -27,25 +35,23 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.1",
     "@tanstack/react-table": "^8.19.2",
-    "@types/node": "^20.14.10",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
-    "vite-plugin-dts": "^3.9.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/rollup-plugin-generate-package-json": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
@@ -54,9 +60,17 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
+    "vite-plugin-dts": "^3.9.1",
     "vite-plugin-static-copy": "^1.0.6"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
