--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.39",
+    "postcss-import": "^16.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup-plugin-generate-package-json": "^3.2.0",
