--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "@mint/ui",
-  "private": true,
+  "name": "mint-ui",
   "version": "0.0.1",
   "license": "MIT",
   "author": {
@@ -11,6 +10,7 @@
   "type": "module",
   "main": "./index.cjs",
   "module": "./index.js",
+  "repository": "git://github.com/tekminewe/mint-ui.git",
   "exports": {
     ".": {
       "import": "./index.js",
