--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@tekminewe/mint-ui",
-  "version": "0.0.1",
+  "version": "0.0.12",
   "license": "MIT",
   "author": {
     "name": "Tek Min Ewe",
     "email": "ewe.tekmin@outlook.com",
     "url": "https://tekminewe.com"
   },
+  "repository": "git://github.com/tekminewe/mint-ui.git",
   "type": "module",
   "main": "./index.cjs",
   "module": "./index.js",
-  "repository": "git://github.com/tekminewe/mint-ui.git",
   "exports": {
     ".": {
       "import": "./index.js",
@@ -25,12 +25,14 @@
   "types": "./index.d.ts",
   "scripts": {
     "dev": "storybook dev -p 6006",
-    "build": "tsc -b && vite build",
-    "postbuild": "cp package.json dist/ && cp README.md dist/",
+    "build": "tsc -b && vite build && cp package.json dist/ && cp README.md dist/",
+    "prepublish": "pnpm build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^3.1.1",
     "@tanstack/react-table": "^8.19.2",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -46,8 +48,6 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/themes": "^3.1.1",
     "@storybook/addon-essentials": "^8.2.2",
     "@storybook/addon-interactions": "^8.2.2",
     "@storybook/addon-links": "^8.2.2",
@@ -68,6 +68,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "eslint-plugin-storybook": "^0.8.0",
+    "glob": "^11.0.0",
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
     "react": "^18.3.1",
@@ -81,8 +82,6 @@
     "vite-plugin-static-copy": "^1.0.6"
   },
   "peerDependencies": {
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/themes": "^3.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
