--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "lucide-react": "^0.428.0",
+    "novel": "^0.5.0",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.52.1",
     "react-toastify": "^10.0.5",
@@ -56,6 +58,7 @@
     "@storybook/react": "^8.2.2",
     "@storybook/react-vite": "^8.2.2",
     "@storybook/test": "^8.2.2",
+    "@tailwindcss/typography": "^0.5.14",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
