--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekminewe/mint-ui",
-  "version": "0.0.14",
+  "version": "0.0.15-alpha1",
   "license": "MIT",
   "author": {
     "name": "Tek Min Ewe",
@@ -53,7 +53,6 @@
     "@storybook/addon-essentials": "^8.2.2",
     "@storybook/addon-interactions": "^8.2.2",
     "@storybook/addon-links": "^8.2.2",
-    "@storybook/addon-onboarding": "^8.2.2",
     "@storybook/blocks": "^8.2.2",
     "@storybook/react": "^8.2.2",
     "@storybook/react-vite": "^8.2.2",
