--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.52.1",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
+    "use-debounce": "^10.0.3",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
     "xlsx": "^0.18.5",
