--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekminewe/mint-ui",
-  "version": "0.0.15-alpha1",
+  "version": "0.0.15-alpha6",
   "license": "MIT",
   "author": {
     "name": "Tek Min Ewe",
@@ -31,14 +31,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.1",
     "@tanstack/react-table": "^8.19.2",
+    "@tiptap/extension-placeholder": "^2.6.6",
+    "@tiptap/pm": "^2.6.6",
+    "@tiptap/react": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.428.0",
-    "novel": "^0.5.0",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.52.1",
     "react-toastify": "^10.0.5",
@@ -78,6 +82,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup-plugin-generate-package-json": "^3.2.0",
+    "sass": "^1.77.8",
     "storybook": "^8.2.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
