--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.1",
     "@tanstack/react-table": "^8.19.2",
+    "@tiptap-pro/extension-file-handler": "^2.11.1",
+    "@tiptap/core": "^2.6.6",
     "@tiptap/extension-placeholder": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
