--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekminewe/mint-ui",
-  "version": "0.0.15-alpha7",
+  "version": "0.0.15-alpha12",
   "license": "MIT",
   "author": {
     "name": "Tek Min Ewe",
@@ -35,8 +35,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.1",
     "@tanstack/react-table": "^8.19.2",
-    "@tiptap-pro/extension-file-handler": "^2.11.1",
     "@tiptap/core": "^2.6.6",
+    "@tiptap/extension-code-block-lowlight": "^2.6.6",
     "@tiptap/extension-placeholder": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "lowlight": "^3.1.0",
     "lucide-react": "^0.428.0",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.52.1",
