--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekminewe/mint-ui",
-  "version": "0.0.14",
+  "version": "0.0.15-alpha12",
   "license": "MIT",
   "author": {
     "name": "Tek Min Ewe",
@@ -31,16 +31,26 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.1",
     "@tanstack/react-table": "^8.19.2",
+    "@tiptap/core": "^2.6.6",
+    "@tiptap/extension-code-block-lowlight": "^2.6.6",
+    "@tiptap/extension-placeholder": "^2.6.6",
+    "@tiptap/pm": "^2.6.6",
+    "@tiptap/react": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "lowlight": "^3.1.0",
+    "lucide-react": "^0.428.0",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.52.1",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
+    "use-debounce": "^10.0.3",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.1",
     "xlsx": "^0.18.5",
@@ -51,11 +61,11 @@
     "@storybook/addon-essentials": "^8.2.2",
     "@storybook/addon-interactions": "^8.2.2",
     "@storybook/addon-links": "^8.2.2",
-    "@storybook/addon-onboarding": "^8.2.2",
     "@storybook/blocks": "^8.2.2",
     "@storybook/react": "^8.2.2",
     "@storybook/react-vite": "^8.2.2",
     "@storybook/test": "^8.2.2",
+    "@tailwindcss/typography": "^0.5.14",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -75,6 +85,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup-plugin-generate-package-json": "^3.2.0",
+    "sass": "^1.77.8",
     "storybook": "^8.2.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
