test: integrate chromatic

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "email": "ewe.tekmin@outlook.com",
     "url": "https://tekminewe.com"
   },
-  "repository": "git://github.com/tekminewe/mint-ui.git",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tekminewe/mint-ui.git"
+  },
   "type": "module",
   "main": "./index.cjs",
   "module": "./index.js",
@@ -27,7 +30,9 @@
     "dev": "storybook dev -p 6006",
     "build": "tsc -b && vite build && cp package.json dist/ && cp README.md dist/",
     "prepublish": "pnpm build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -96,5 +101,9 @@
   "peerDependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/tekminewe/mint-ui/issues"
+  },
+  "homepage": "https://github.com/tekminewe/mint-ui#readme"
 }
