fix: server error for rich text preview

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekminewe/mint-ui",
-  "version": "0.0.17-alpha8",
+  "version": "0.0.17-alpha17",
   "license": "MIT",
   "author": {
     "name": "Tek Min Ewe",
@@ -43,6 +43,7 @@
     "@tiptap/core": "^2.6.6",
     "@tiptap/extension-code-block-lowlight": "^2.6.6",
     "@tiptap/extension-placeholder": "^2.6.6",
+    "@tiptap/html": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
