--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekminewe/mint-ui",
-  "version": "0.0.17-alpha17",
+  "version": "0.0.18-alpha2",
   "license": "MIT",
   "author": {
     "name": "Tek Min Ewe",
@@ -51,9 +51,10 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "lowlight": "^3.1.0",
-    "lucide-react": "^0.428.0",
+    "lucide-react": "^0.439.0",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
     "use-debounce": "^10.0.3",
