feat: add link extension

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tanstack/react-table": "^8.19.2",
     "@tiptap/core": "^2.6.6",
     "@tiptap/extension-code-block-lowlight": "^2.6.6",
+    "@tiptap/extension-link": "^2.6.6",
     "@tiptap/extension-placeholder": "^2.6.6",
     "@tiptap/html": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
