--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/themes": "^3.1.1",
     "@tanstack/react-table": "^8.19.2",
     "@tiptap/core": "^2.6.6",
+    "@tiptap/extension-bubble-menu": "^2.6.6",
     "@tiptap/extension-code-block-lowlight": "^2.6.6",
     "@tiptap/extension-link": "^2.6.6",
     "@tiptap/extension-placeholder": "^2.6.6",
