--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tekminewe/mint-ui",
-  "version": "0.0.19-alpha2",
+  "version": "0.0.19-alpha5",
   "license": "MIT",
   "author": {
     "name": "Tek Min Ewe",
@@ -101,6 +101,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1",
+    "vite-plugin-lib-inject-css": "^2.1.1",
     "vite-plugin-static-copy": "^1.0.6"
   },
   "peerDependencies": {
