--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/themes": "^3.1.6",
     "@tanstack/react-table": "^8.19.2",
