feat: update components

--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "highlight.js": "^11.10.0",
     "lowlight": "^3.1.0",
     "react-day-picker": "^8.10.1",
-    "react-hook-form": "^7.52.1",
     "react-icons": "^5.4.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
@@ -98,6 +97,7 @@
     "postcss-import": "^16.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "sass": "^1.77.8",
     "storybook": "^8.4.6",
@@ -110,7 +110,8 @@
   },
   "peerDependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2"
   },
   "bugs": {
     "url": "https://github.com/tekminewe/mint-ui/issues"
