--- a/package.json
+++ b/package.json
@@ -109,8 +109,8 @@
     "vite-plugin-static-copy": "^1.0.6"
   },
   "peerDependencies": {
-    "react": "^19",
-    "react-dom": "^19",
+    "react": "^18.0 || ^19.0",
+    "react-dom": "^18.0 || ^19.0",
     "react-hook-form": "^7"
   },
   "bugs": {
