--- a/package.json
+++ b/package.json
@@ -72,14 +72,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.2",
-    "@storybook/addon-essentials": "^8.4.6",
-    "@storybook/addon-interactions": "^8.4.6",
-    "@storybook/addon-links": "^8.4.6",
-    "@storybook/blocks": "^8.4.6",
-    "@storybook/react": "^8.4.6",
-    "@storybook/react-vite": "^8.4.6",
-    "@storybook/test": "^8.4.6",
+    "@chromatic-com/storybook": "^4.0.0",
+    "@storybook/addon-docs": "^9.0.8",
+    "@storybook/addon-links": "^9.0.8",
+    "@storybook/react-vite": "^9.0.8",
     "@tailwindcss/typography": "^0.5.14",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
@@ -93,7 +89,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "eslint-plugin-storybook": "^0.11.1",
+    "eslint-plugin-storybook": "^9.0.8",
     "glob": "^11.0.0",
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
@@ -102,7 +98,7 @@
     "react-hook-form": "^7",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "sass": "^1.77.8",
-    "storybook": "^8.4.6",
+    "storybook": "^9.0.8",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
