--- a/package.json
+++ b/package.json
@@ -75,33 +75,34 @@
     "@chromatic-com/storybook": "^4.0.0",
     "@storybook/addon-docs": "^9.0.8",
     "@storybook/addon-links": "^9.0.8",
+    "@storybook/addon-themes": "^9.0.9",
     "@storybook/react-vite": "^9.0.8",
     "@tailwindcss/typography": "^0.5.14",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/rollup-plugin-generate-package-json": "^3.2.9",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "chromatic": "^11.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-react-refresh": "^0.4.8",
     "eslint-plugin-storybook": "^9.0.8",
     "glob": "^11.0.0",
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
-    "react": "^19",
-    "react-dom": "^19",
-    "react-hook-form": "^7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "sass": "^1.77.8",
     "storybook": "^9.0.8",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
     "vite-plugin-dts": "^3.9.1",
     "vite-plugin-lib-inject-css": "^2.1.1",
     "vite-plugin-static-copy": "^1.0.6"
